--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./App/style.css">
 </head>
 
 <div class="text-center">
@@ -10,14 +10,11 @@
         <div class="top_band"></div>
         <div class="watch_face">
             <div class="watch_display">
-                <div class="circle" id="red"> </div>
-                <div class="circle" id="green"> </div>
-                <div class="circle" id="blue"> </div>
+                <iframe src="./Menu/menu.html" scrolling="no"></iframe>
             </div>
         </div>
         <div class="bottom_band"></div>
     </div>
 </div>
-<script src="script.js"></script>
 
 </html>
