--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./App/style.css">
+    <link rel="stylesheet" href="./css/watch.css">
 </head>
 
 <div class="text-center">
@@ -10,7 +10,7 @@
         <div class="top_band"></div>
         <div class="watch_face">
             <div class="watch_display">
-                <iframe src="./Menu/menu.html" scrolling="no"></iframe>
+                <iframe id="links" src="./Html/MainMenu/menu.html" scrolling="no"></iframe>
             </div>
         </div>
         <div class="bottom_band"></div>
