Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/MainMenu/social.html
+++ b/Html/MainMenu/social.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../../css/social1.css">
+    <link rel="stylesheet" href="../../css/social.css">
 </head>
 
 <div class="glob">
-    <div id="friendList">
+    <div id="friendList" onclick="changePageTofriendList()">
         <img src="../../Images/friendlist.png" alt="friendListI">
         <p>Friends List</p>
     </div>
-    <div id="Profile">
+    <div id="Profile" onclick="changePageToProfile()">
         <img src="../../Images/profile.png" alt="profileI">
         <p>Profile</p>
     </div>
