--- a/Html/Social/profile.html
+++ b/Html/Social/profile.html
@@ -2,21 +2,24 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styleS.css">
+    <link rel="stylesheet" href="../../css/profile.css">
 </head>
 
 <div class="glob">
-    <div id="friendList">
-        <img src="../Images/profile-user.png" alt="socialP">
-        <p>FriendList</p>
+    <img src="../../Images/profile-user.png" alt="caraDaPessoa">
+    <p>Id: </p>
+    <p>Nome: </p>
+    <p>Distancia: </p>
+    <div id="notes">
+        <img src="../../Images/notes.png" alt="notes">
     </div>
-    <div id="Profile">
-        <img src="../Images/maps.png" alt="mapa">
-        <p>Profile</p>
+    <div id="settings">
+        <img src="../../Images/settings.png" alt="setting">
     </div>
-    <div id="return"></div>
+    <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
+                src="../../Images/retun.png" alt="return"></button></div>
 </div>
 
-<script src="../js/menu1.js"></script>
+<script src="../../js/profile.js"></script>
 
 </html>
