--- a/Html/Social/profile.html
+++ b/Html/Social/profile.html
@@ -7,9 +7,9 @@
 
 <div class="glob">
     <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-    <p>Id: </p>
-    <p>Nome: </p>
-    <p>Distancia: </p>
+    <p id="id">Id: </p>
+    <p id="nome">Nome: </p>
+    <p id="dist">Distancia: </p>
     <div id="notes">
         <img src="../../Images/notes.png" alt="notes">
     </div>
