Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/MainMenu/menu.html
+++ b/Html/MainMenu/menu.html
@@ -11,7 +11,7 @@
         <p>Social</p>
     </div>
     <div id="map">
-        <img src="../../Images/maps.png" alt="mapa">
+        <img src="../../Images/maps.png" alt="mapa" onclick="changePageToMap()">
         <p>Map</p>
     </div>
 </div>
