--- a/Html/Social/userprofile.html
+++ b/Html/Social/userprofile.html
@@ -7,16 +7,14 @@
 
 <div class="glob">
     <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-    <p id="id">Id: </p>
-    <p id="nome">Nome: </p>
-    <p id="dist">Distancia: </p>
-    <div id="settings">
-        <img src="../../Images/settings.png" alt="setting" onclick="changeToSettings()">
-    </div>
+    <p id="id">Id:69696969 </p>
+    <p id="nome">Nome: Test Subject</p>
+    <img src="../../Images/view.png" alt="viewOn" id="olho" onclick="mudaOlho()">
+
     <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
                 src="../../Images/retun.png" alt="return"></button></div>
 </div>
 
-<script src="../../js/profile.js"></script>
+<script src="../../js/userprofile.js"></script>
 
 </html>
