--- a/Html/MainMenu/menu.html
+++ b/Html/MainMenu/menu.html
@@ -10,8 +10,8 @@
         <img src="../../Images/profile-user.png" alt="socialP">
         <p>Social</p>
     </div>
-    <div id="map">
-        <img src="../../Images/maps.png" alt="mapa" onclick="changePageToMap()">
+    <div id="map" onclick="changePageToMap()">
+        <img src="../../Images/maps.png" alt="mapa">
         <p>Map</p>
     </div>
 </div>
