Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/MainMenu/social.html
+++ b/Html/MainMenu/social.html
@@ -15,8 +15,8 @@
         <p>Profile</p>
     </div>
     <div id="return">
-        <button type="button" id="button" name="returnB" onclick="changeToMainMenu()"><img src="../../Images/retun.png"
-                alt="return"></button>
+        <button type="button" id="returnMenu" name="returnB" onclick="changeToMainMenu()"><img
+                src="../../Images/retun.png" alt="return"></button>
     </div>
 </div>
 
