--- a/Html/Social/friendlist.html
+++ b/Html/Social/friendlist.html
@@ -8,15 +8,18 @@
 <div class="glob">
     <div id="list">
         <ul id="amigos">
-            <li>Friend 1</li>
-            <li>Friend 2</li>
-            <li>Friend 3</li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 1</li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 2</li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 3</li>
         </ul>
     </div>
-    <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
+    <button type="button" id="addFriend" onclick="changeToAddFriend()"><img src="../../Images/add-user.png"
+            alt="newFriend"></button>
+    <div id="return"> <button type="button" id="previous" name="returnB" onclick="changeToPrevious()"><img
                 src="../../Images/retun.png" alt="return"></button></div>
 </div>
 
 <script src="../../js/friendlist.js"></script>
+<script src="../../js/friends.js"></script>
 
 </html>
