Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/MainMenu/map.html
+++ b/Html/MainMenu/map.html
@@ -7,6 +7,10 @@
 
 <div class="glob">
 
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6224.343616194799!2d-9.141766652307977!3d38.73681948772778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1933a24aa81f17%3A0x880c7c731a54423!2sInstituto%20Superior%20T%C3%A9cnico!5e0!3m2!1spt-PT!2spt!4v1681757513646!5m2!1spt-PT!2spt"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div id="map">
         <img src="../../Images/mapa.png" alt="map">
     </div>
