Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/Social/addFriend.html
+++ b/Html/Social/addFriend.html
@@ -8,9 +8,9 @@
 <div class="glob">
     <form id="addForm">
 
-        insira o nome
+        <p id="InName">Insira o nome</p>
         <input type="text" id="info">
-        <p>insira o id</p>
+        <p id="InId">Insira o id</p>
         <input type="text" id="id">
     </form>
     <button type="submit" form="addForm" value="Submit" id="inFriend" onclick="addFriend()"><img
