--- a/Html/Mapa/mapMenu.html
+++ b/Html/Mapa/mapMenu.html
@@ -6,19 +6,19 @@
 </head>
 
 <div class="glob">
-    <div id="waypoints" onclick="changeToWayPointsMenu()">
+    <div id="waypoints">
         <img src="../../Images/house.png" alt="waypoints">
         <p>Way Points</p>
     </div>
     <div id="filter" onclick="changeToFilterMenu()">
-            <img src="../../Images/filter.png" alt="filter">
-            <p>Filter</p>
+        <img src="../../Images/filter.png" alt="filter">
+        <p>Filter</p>
     </div>
-    </div>   
-    <div id="return">
-        <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun.png"
-                alt="return"></button>
-    </div> 
+</div>
+<div id="return">
+    <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun.png"
+            alt="return"></button>
+</div>
 </div>
 
 <script src="../../js/mapMenu.js"></script>
