--- a/Html/Social/friendlist.html
+++ b/Html/Social/friendlist.html
@@ -8,9 +8,15 @@
 <div class="glob">
     <div id="list">
         <ul id="amigos">
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 1</li>
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 2</li>
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa"> Friend 3</li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
+                <p> Friend 1</p>
+            </li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
+                <p> Friend 2</p>
+            </li>
+            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
+                <p> Friend 3</p>
+            </li>
         </ul>
     </div>
     <button type="button" id="addFriend" onclick="changeToAddFriend()"><img src="../../Images/add-user.png"
