--- a/index.html
+++ b/index.html
@@ -17,4 +17,10 @@
     </div>
 </div>
 
+<div id="tarefas">
+    <p>Filtre o mapa para aparecer só restaurantes</p>
+    <p>Veja a sua lista de amigos</p>
+    <p>Mude o seu perfil para visibilidade privada</p>
+</div>
+
 </html>
