--- a/Html/Social/friendlist.html
+++ b/Html/Social/friendlist.html
@@ -8,15 +8,6 @@
 <div class="glob">
     <div id="list">
         <ul id="amigos">
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-                <p> Friend 1</p>
-            </li>
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-                <p> Friend 2</p>
-            </li>
-            <li> <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-                <p> Friend 3</p>
-            </li>
         </ul>
     </div>
     <button type="button" id="addFriend" onclick="changeToAddFriend()"><img src="../../Images/add-user.png"
@@ -25,6 +16,7 @@
                 src="../../Images/retun.png" alt="return"></button></div>
 </div>
 
+<script src="../../js/fotos.js"></script>
 <script src="../../js/friendlist.js"></script>
 <script src="../../js/friends.js"></script>
 
