--- a/Html/Social/profile.html
+++ b/Html/Social/profile.html
@@ -6,17 +6,17 @@
 </head>
 
 <div class="glob">
-    <img src="../../Images/profile-user.png" alt="caraDaPessoa">
+    <img src="../../Images/profile-user.png" alt="caraDaPessoa" id="pfp">
     <p id="id">Id: </p>
     <p id="nome">Nome: </p>
     <p id="dist">Distancia: </p>
-    <div id="settings">
+    <!-- <div id="settings">
         <img src="../../Images/settings.png" alt="setting" onclick="changeToSettings()">
-    </div>
+    </div> -->
     <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
                 src="../../Images/retun.png" alt="return"></button></div>
 </div>
-
+<script src="../../js/fotos.js"></script>
 <script src="../../js/profile.js"></script>
 
 </html>
