--- a/Html/Social/addFriend.html
+++ b/Html/Social/addFriend.html
@@ -7,14 +7,15 @@
 
 <div class="glob">
     <form id="addForm">
-
         <p id="InName">Insira o nome</p>
         <input type="text" id="info">
         <p id="InId">Insira o id</p>
         <input type="text" id="id">
     </form>
-    <button type="submit" form="addForm" value="Submit" id="inFriend" onclick="addFriend()"><img
-            src="../../Images/add.png" alt="addB" id="addBImage"></button>
+    <button value="Submit" id="inFriend" onclick="addFriend()"><img src="../../Images/add.png" alt="addB"
+            id="addBImage"></button>
+
+
     <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
                 src="../../Images/retun.png" alt="return"></button></div>
 </div>
