Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/Mapa/mapMenu.html
+++ b/Html/Mapa/mapMenu.html
@@ -6,7 +6,7 @@
 </head>
 
 <div class="glob">
-    <div id="waypoints">
+    <div id="waypoints" onclick="changeToWayPointsMenu()">
         <img src="../../Images/house.png" alt="waypoints">
         <p>Way Points</p>
     </div>
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div id="return">
-    <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun.png"
+    <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun3.png"
             alt="return"></button>
 </div>
 </div>
