--- a/Html/Social/addFriend.html
+++ b/Html/Social/addFriend.html
@@ -5,22 +5,25 @@
     <link rel="stylesheet" href="../../css/addFriend.css">
 </head>
 
-<div class="glob">
-    <form id="addForm">
-        <p id="InName">Insira o nome</p>
-        <input type="text" id="info">
-        <p id="InId">Insira o id</p>
-        <input type="text" id="id">
-    </form>
-    <button value="Submit" id="inFriend" onclick="addFriend()"><img src="../../Images/add.png" alt="addB"
-            id="addBImage"></button>
+<body>
+    <div class="glob">
+        <form id="addForm">
+            <p id="InName">Insira o nome</p>
+            <input type="text" id="info">
+            <p id="InId">Insert id</p>
+            <input type="text" id="id">
+        </form>
+        <button value="Submit" id="inFriend" onclick="addFriend()"><img src="../../Images/add.png" alt="addB"
+                id="addBImage"></button>
 
 
-    <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
-                src="../../Images/retun.png" alt="return"></button></div>
-</div>
+        <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
+                    src="../../Images/retun.png" alt="return"></button></div>
+    </div>
+</body>
 
+
+<script src="../../js/fotos.js"></script>
 <script src="../../js/addFriend.js"></script>
-<script src="../../js/friends.js"></script>
 
 </html>
