--- a/Html/Social/userprofile.html
+++ b/Html/Social/userprofile.html
@@ -8,7 +8,7 @@
 <div class="glob">
     <img src="../../Images/profile-user.png" alt="caraDaPessoa">
     <p id="id">Id:10000 </p>
-    <p id="nome">Nome: Test Subject</p>
+    <p id="nome">Name: Test Subject</p>
     <img src="../../Images/view.png" alt="viewOn" id="olho" onclick="mudaOlho()">
 
     <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
