--- a/Html/Social/profile.html
+++ b/Html/Social/profile.html
@@ -8,8 +8,8 @@
 <div class="glob">
     <img src="../../Images/profile-user.png" alt="caraDaPessoa" id="pfp">
     <p id="id">Id: </p>
-    <p id="nome">Nome: </p>
-    <p id="dist">Distancia: </p>
+    <p id="nome">Name: </p>
+    <p id="dist">Distance: </p>
     <!-- <div id="settings">
         <img src="../../Images/settings.png" alt="setting" onclick="changeToSettings()">
     </div> -->
