Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/Html/Social/addFriend.html
+++ b/Html/Social/addFriend.html
@@ -18,7 +18,15 @@
 
 
         <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
-                    src="../../Images/retun.png" alt="return"></button></div>
+                    src="../../Images/back.png" alt="return" id="backBut"></button></div>
+    </div>
+
+    <div id="alertDiv">
+        <p>Name and Id must be filled</p>
+        <button id="ContinueOperation"><img src="../../Images/back.png" alt="AcceptIcon" onclick="changeToPrevious()"
+                id="returnFriend"></button>
+        <button id="ReturnToFriendList"><img src="../../Images/friendlist.png" alt="DeclineIcon" onclick="vanishDiv()"
+                id="returnIm"></button>
     </div>
 </body>
 
