--- a/Html/Social/friendlist.html
+++ b/Html/Social/friendlist.html
@@ -13,7 +13,7 @@
     <button type="button" id="addFriend" onclick="changeToAddFriend()"><img src="../../Images/add-user.png"
             alt="newFriend"></button>
     <div id="return"> <button type="button" id="previous" name="returnB" onclick="changeToPrevious()"><img
-                src="../../Images/retun.png" alt="return"></button></div>
+                src="../../Images/back.png" alt="return"></button></div>
 </div>
 
 <script src="../../js/fotos.js"></script>
