--- a/Html/Social/userprofile.html
+++ b/Html/Social/userprofile.html
@@ -6,13 +6,13 @@
 </head>
 
 <div class="glob">
-    <img src="../../Images/profile-user.png" alt="caraDaPessoa">
-    <p id="id">Id:10000 </p>
-    <p id="nome">Name: Test Subject</p>
+    <img src="../../Images/16.png" alt="caraDaPessoa" id="pfp1">
+    <p id="id">Id:99999 </p>
+    <p id="nome">Name: Klebbinhu</p>
     <img src="../../Images/view.png" alt="viewOn" id="olho" onclick="mudaOlho()">
 
     <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
-                src="../../Images/retun.png" alt="return"></button></div>
+                src="../../Images/back.png" alt="return"></button></div>
 </div>
 
 <script src="../../js/userprofile.js"></script>
