--- a/Html/Social/profile.html
+++ b/Html/Social/profile.html
@@ -14,8 +14,12 @@
         <button id="remove" onclick="appearRemoveDiv()">
             <img src="../../Images/remove-user.png" alt="removeIcon" id="remUser">
         </button>
+
+        <button id="toFriend" onclick="goToPlace()">
+            <img src="../../Images/highway.png">
+        </button>
         <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
-                    src="../../Images/retun.png" alt="return"></button></div>
+                    src="../../Images/back.png" alt="return"></button></div>
     </div>
 
     <div id="removeDiv">
