--- a/Html/Social/userprofile.html
+++ b/Html/Social/userprofile.html
@@ -5,15 +5,21 @@
     <link rel="stylesheet" href="../../css/profile.css">
 </head>
 
-<div class="glob">
-    <img src="../../Images/16.png" alt="caraDaPessoa" id="pfp1">
-    <p id="id">Id:99999 </p>
-    <p id="nome">Name: Klebbinhu</p>
-    <img src="../../Images/view.png" alt="viewOn" id="olho" onclick="mudaOlho()">
+<body>
+    <div class="glob">
+        <img src="../../Images/16.png" alt="caraDaPessoa" id="pfp1">
+        <p id="id">Id:99999 </p>
+        <p id="nome">Name: Klebbinhu</p>
+        <img src="../../Images/view.png" alt="viewOn" id="olho" onclick="mudaOlho()">
 
-    <div id="return"> <button type="button" id="button" name="returnB" onclick="changeToPrevious()"><img
-                src="../../Images/back.png" alt="return"></button></div>
-</div>
+        <div id="return">
+            <button type="button" id="button" name="returnB" onclick="changeToPrevious()">
+                <img src="../../Images/back.png" alt="return">
+            </button>
+        </div>
+    </div>
+
+</body>
 
 <script src="../../js/userprofile.js"></script>
 
