--- a/Html/Mapa/filter.html
+++ b/Html/Mapa/filter.html
@@ -5,38 +5,38 @@
     <link rel="stylesheet" href="../../css/filter.css">
 </head>
 
-    <div class='circle'>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+<div class='circle'>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 
-        <div id="return">
-            <button type="button" id="returnMenu" name="returnB" onclick="changeToMapMenu()"><img
-                    src="../../Images/retun.png" alt="return"></button>
-        </div>
-    
-        <div id="MultiBanco" onclick="changeToMapMultibanco()">
-            <img src="../../Images/multibanco.png" alt="img">
-            <p>Multibanco</p>
-        </div>
-
-        <div id="Museu" onclick="changePageToTurismo()">
-            <img src="../../Images/museum.png" alt="img">
-            <p>Turismo</p>
-        </div>
-
-        <div id="Restauracao" onclick="changeToMapRestauracao()">
-            <img src="../../Images/restaurante.png" alt="img">
-            <p>Restauracao</p>
-        </div>
-
-        <div id="Transportes" onclick="changeToMapTransportes()">
-            <img src="../../Images/metro.png" alt="img">
-            <p>Transportes</p>
-        </div>
-
+    <div id="return">
+        <button type="button" id="returnMenu" name="returnB" onclick="changeToMapMenu()"><img
+                src="../../Images/retun.png" alt="return"></button>
     </div>
+
+    <div id="MultiBanco" onclick="changeToMapMultibanco()">
+        <img src="../../Images/multibanco.png" alt="img">
+        <p>ATM</p>
+    </div>
+
+    <div id="Museu" onclick="changePageToTurismo()">
+        <img src="../../Images/museum.png" alt="img">
+        <p>Tourism</p>
+    </div>
+
+    <div id="Restauracao" onclick="changeToMapRestauracao()">
+        <img src="../../Images/restaurante.png" alt="img">
+        <p>FoodCourt</p>
+    </div>
+
+    <div id="Transportes" onclick="changeToMapTransportes()">
+        <img src="../../Images/metro.png" alt="img">
+        <p>Tranport</p>
+    </div>
+
+</div>
 
 <script src="../../js/filter.js"></script>
 
