--- a/Html/Mapa/mapFilterRestauracao.html
+++ b/Html/Mapa/mapFilterRestauracao.html
@@ -4,21 +4,24 @@
 <head>
     <link rel="stylesheet" href="../../css/mapFilterMultibanco.css">
 </head>
-    
-<div class="glob">
 
-    <div id="map">
-        <img src="../../Images/restauracaoMapa.png" alt="map">
+<body>
+    <div class="glob">
+
+        <div id="map">
+            <img src="../../Images/restauracaoMapa.png" alt="map">
+        </div>
+        <div id="mapMenu">
+            <button type="button" id="mapButton" name="returnB" onclick="changeToMapMenu()"><img
+                    src="../../Images/map_Menu.png" alt="mapMenu">
+        </div>
+        <div id="return">
+            <button type="button" id="button" name="returnB" onclick="changeToMainMenu()"><img
+                    src="../../Images/back.png" alt="return"></button>
+        </div>
     </div>
-    <div id="mapMenu">
-        <button type="button" id="mapButton" name="returnB" onclick="changeToMapMenu()"><img
-                src="../../Images/map_Menu.png" alt="mapMenu">
-    </div>
-    <div id="return">
-        <button type="button" id="button" name="returnB" onclick="changeToMainMenu()"><img src="../../Images/retun.png"
-                alt="return"></button>
-    </div>
-</div>
+</body>
+
 <script src="../../js/mapFilterMultibanco.js"></script>
 
 </html>
