--- a/Html/Mapa/mapFilterTransportes.html
+++ b/Html/Mapa/mapFilterTransportes.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="../../css/mapFilterMultibanco.css">
 </head>
-    
+
 <div class="glob">
 
     <div id="map">
@@ -15,7 +15,7 @@
                 src="../../Images/map_Menu.png" alt="mapMenu">
     </div>
     <div id="return">
-        <button type="button" id="button" name="returnB" onclick="changeToMainMenu()"><img src="../../Images/retun.png"
+        <button type="button" id="button" name="returnB" onclick="changeToMainMenu()"><img src="../../Images/back.png"
                 alt="return"></button>
     </div>
 </div>
