--- a/Html/Mapa/turismo.html
+++ b/Html/Mapa/turismo.html
@@ -8,17 +8,17 @@
 <div class="glob">
     <div id="museum" onclick="changeToMapFilterMuseu()">
         <img src="../../Images/museum.png" alt="museum">
-        <p>Museus</p>
+        <p>Museum</p>
     </div>
     <div id="hotel" onclick="changeToMapFilterHotel()">
-            <img src="../../Images/hotel.png" alt="hotel">
-            <p>Hotéis</p>
+        <img src="../../Images/hotel.png" alt="hotel">
+        <p>Hotels</p>
     </div>
-    </div>   
-    <div id="return">
-        <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun.png"
-                alt="return"></button>
-    </div> 
+</div>
+<div id="return">
+    <button type="button" id="button" name="returnB" onclick="changeToMap()"><img src="../../Images/retun.png"
+            alt="return"></button>
+</div>
 </div>
 
 <script src="../../js/turismo.js"></script>
