--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 <div id="tarefas">
 
-    <header>
-        **No menu de opções do mapa, a função waypoint vai ser implementada na versão futura do projeto**
-    </header>
     <p>TAREFAS: </p>
+    <p>Adicione um waypoint e veja-o</p>
     <p>Filtre o mapa para aparecer só restaurantes</p>
     <p>Adicione um amigo com id 2000 e veja o seu perfil</p>
     <p>Mude o seu perfil para visibilidade privada</p>
