--- a/Html/MainMenu/menu.html
+++ b/Html/MainMenu/menu.html
@@ -5,16 +5,19 @@
     <link rel="stylesheet" href="../../css/menu.css">
 </head>
 
-<div class="glob">
-    <div id="social" onclick="changePageToSocial()">
-        <img src="../../Images/profile-user.png" alt="socialP">
-        <p>Social</p>
+<body>
+    <div class="glob">
+        <div id="social" onclick="changePageToSocial()">
+            <img src="../../Images/profile-user.png" alt="socialP">
+            <p>Social</p>
+        </div>
+        <div id="map" onclick="changePageToMap()">
+            <img src="../../Images/maps.png" alt="mapa">
+            <p>Map</p>
+        </div>
     </div>
-    <div id="map" onclick="changePageToMap()">
-        <img src="../../Images/maps.png" alt="mapa">
-        <p>Map</p>
-    </div>
-</div>
+
+</body>
 
 <script src="../../js/menu.js"></script>
 
