--- a/Html/MainMenu/social.html
+++ b/Html/MainMenu/social.html
@@ -5,20 +5,22 @@
     <link rel="stylesheet" href="../../css/social.css">
 </head>
 
-<div class="glob">
-    <div id="friendList" onclick="changePageTofriendList()">
-        <img src="../../Images/friendlist.png" alt="friendListI">
-        <p>Friends List</p>
+<body>
+    <div class="glob">
+        <div id="friendList" onclick="changePageTofriendList()">
+            <img src="../../Images/friendlist.png" alt="friendListI">
+            <p>Friends List</p>
+        </div>
+        <div id="Profile" onclick="changePageToProfile()">
+            <img src="../../Images/profile.png" alt="profileI">
+            <p>Profile</p>
+        </div>
+        <div id="return">
+            <button type="button" id="returnMenu" name="returnB" onclick="changeToMainMenu()"><img
+                    src="../../Images/retun.png" alt="return"></button>
+        </div>
     </div>
-    <div id="Profile" onclick="changePageToProfile()">
-        <img src="../../Images/profile.png" alt="profileI">
-        <p>Profile</p>
-    </div>
-    <div id="return">
-        <button type="button" id="returnMenu" name="returnB" onclick="changeToMainMenu()"><img
-                src="../../Images/retun.png" alt="return"></button>
-    </div>
-</div>
+</body>
 
 <script src="../../js/social.js"></script>
 
