--- a/Html/Social/toFriend.html
+++ b/Html/Social/toFriend.html
@@ -18,7 +18,6 @@
         </div>
     </div>
 </body>
-
-<script src="../../js/tofriend.js"></script>
+<script src="../../js/toFriend.js"></script>
 
 </html>
